se agregan links iniciales a templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,18 @@
     <title>Ceballos FinalProject</title>
 </head>
 <body>
-    <h1>Hola Mundo</h1>
+    <header>
+        <h1>Proyecto Final</h1>
+    </header>
+    <nav>
+        <a href={% url 'inicio' %} class="nav_link">INICIO</a>
+        <a href={% url 'pacientes' %} class="nav_link">PACIENTES</a>
+        
+
+    </nav>
+    <h2>Hola Mundo</h2>
+
+
     
 </body>
 </html>
