modificacion numero afiliado + links nav inicial

--- a/templates/pacientes.html
+++ b/templates/pacientes.html
@@ -13,7 +13,7 @@
         {% endfor %}
 
     </ul>
-        
+    <a href={% url 'agregar_paciente' %}>AGREGAR PACIENTE</a>    
     
 </body>
 </html>
