--- a/inicio/templates/inicio/agregar_paciente.html
+++ b/inicio/templates/inicio/agregar_paciente.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href={% static 'inicio\static\estilos\css\styles.css' %}>
     <title>Agregar paciente</title>
 </head>
 <body>
