--- a/inicio/templates/inicio/pacientes.html
+++ b/inicio/templates/inicio/pacientes.html
@@ -21,7 +21,7 @@
             {% endfor %}
         </ul>
     {% else %}    
-        <p>Pacientes no encontrados.</p>
+        <p>No hay Pacientes cargados.</p>
     {% endif %}
         
         
