--- a/inicio/templates/inicio/index.html
+++ b/inicio/templates/inicio/index.html
@@ -4,7 +4,7 @@
     {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href={% static 'inicio\static\estilos\css\styles.css' %}>
+    {% comment %} <link rel="stylesheet" href={% static 'inicio\static\estilos\css\styles.css' %}> {% endcomment %}
     <title>Ceballos FinalProject</title>
 </head>
 <body>
