se generan paginas con herencia de templates, quedan configuradas primeras rutas simples

--- a/inicio/templates/inicio/inicio.html
+++ b/inicio/templates/inicio/inicio.html
@@ -1,11 +1,17 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
+{% block h1_body1 %}
+Hola Mundo - Inicio
+{% endblock h1_body1 %}
+
+
+{% comment %} <!DOCTYPE html>
 <html lang="en">
 <head>
     {% load static %}
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> {% endcomment %}
     {% comment %} <link rel="stylesheet" href={% static 'inicio\static\estilos\css\styles.css' %}> {% endcomment %}
-    <title>Ceballos FinalProject</title>
+    {% comment %} <title>Ceballos FinalProject</title>
 </head>
 <body>
     <header>
@@ -14,12 +20,8 @@
     <nav>
         <a href={% url 'inicio' %} class="nav_link">INICIO</a>
         <a href={% url 'pacientes' %} class="nav_link">PACIENTES</a>
-        
-
     </nav>
     <h2>Hola Mundo</h2>
-
-
-    
 </body>
-</html>
+</html> {% endcomment %}
+
