--- a/templates/base.html
+++ b/templates/base.html
@@ -42,13 +42,22 @@
                         {% endblock h1_body1 %}
                     </h1>
                     <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
-                    <a class="btn btn-primary" href="#!">Call to Action!</a>
+                    {% block accion1 %}
+                    <a class="btn btn-primary" href="#!">Home</a>
+                    {% endblock accion1 %}
                 </div>
             </div>
             <!-- Call to Action-->
-            <div class="card text-white bg-secondary my-5 py-4 text-center">
-                <div class="card-body"><p class="text-white m-0">This call to action card is a great place to showcase some important information or display a clever tagline!</p></div>
-            </div>
+                <div class="card text-white bg-secondary my-5 py-4 text-center">
+                    <div class="card-body"><p class="text-white m-0">This call to action card is a great place to showcase some important information or display a clever tagline!</p></div>
+                </div>
+            
+            
+            {% block main %}
+
+            {% endblock main %}
+
+
             <!-- Content Row-->
             <div class="row gx-4 gx-lg-5">
                 <div class="col-md-4 mb-5">
