--- a/inicio/templates/inicio/agregar_paciente.html
+++ b/inicio/templates/inicio/agregar_paciente.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    {% load static %}
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href={% static 'inicio\static\estilos\css\styles.css' %}>
-    <title>Agregar paciente</title>
-</head>
-<body>
-    <p>Agregar paciente</p>
+{% extends "base.html" %}
+{% block h1_body1 %}
+Agregar paciente
+{% endblock h1_body1 %}
+{% block main %}
     <form action={% url "agregar_paciente" %} method="POST">
         {% csrf_token %}
         {% comment %} <p>
@@ -32,5 +26,4 @@
         </table>
         <input type="submit" value="Agregar">
     </form>
-</body>
-</html>
+{% endblock main %}
