--- a/templates/base.html
+++ b/templates/base.html
@@ -22,8 +22,9 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href={% url "inicio" %}>Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#!">About Me</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#!">Login</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#!">Logout - REV</a></li>
                         <li class="nav-item"><a class="nav-link" href={% url 'pacientes' %}>Pacientes</a></li>
                     </ul>
                 </div>
