--- a/usuarios/templates/usuarios/registro.html
+++ b/usuarios/templates/usuarios/registro.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
 {% block h1_body1 %}
-Login
+Registro de usuario
 {% endblock h1_body1 %}
 {% block main %}
-    <form action={% url "login" %} method="POST">
+    <form action={% url "registro" %} method="POST">
         {% csrf_token %}
         <table>
             {{formulario}}
+            {% comment %} form {% endcomment %}
         </table>
-        <input type="submit" value="Login">
+        <input type="submit" value="Registarse">
     </form>
 {% endblock main %}
 {% block accion1 %}
     <a class="btn btn-primary" href={% url 'inicio' %}> Home</a>
 {% endblock accion1 %}
-
