correcciones varias para models templates

--- a/inicio/templates/inicio/ver_paciente.html
+++ b/inicio/templates/inicio/ver_paciente.html
@@ -9,7 +9,8 @@
         <li>Nombre: {{paciente.nombre}}</li>
         <li>Apellido: {{paciente.apellido}}</li>
         <li>DNI: {{paciente.dni}}</li>
-        <li># Afiliado: {{paciente.n_afiliado}}</li>
+        <li>Fecha de Nacimiento: {{paciente.fecha_nacimiento}}</li>
+        <li>Afiliado #: {{paciente.n_afiliado}}</li>
         <li>Plan: {{paciente.plan}}</li>
    </ul>
 {% endblock main %}
