se modifica readme, se edita base, se crea about-me, se corrigen vistas de perfiles (pendiente avatar), se agregan socialmedia icons, PENDIENTE ESTUDIOS.

--- a/inicio/templates/inicio/agregar_paciente.html
+++ b/inicio/templates/inicio/agregar_paciente.html
@@ -27,3 +27,6 @@ Agregar paciente
         <input type="submit" value="Agregar">
     </form>
 {% endblock main %}
+{% block cards %}
+{% endblock cards %}
+
