--- a/inicio/templates/inicio/ver_paciente.html
+++ b/inicio/templates/inicio/ver_paciente.html
@@ -18,3 +18,5 @@
 {% block accion1 %}
     <a class="btn btn-primary" href={% url 'pacientes' %}> Pacientes</a>
 {% endblock accion1 %}
+{% block cards %}
+{% endblock cards %}
