--- a/inicio/templates/inicio/pacientes.html
+++ b/inicio/templates/inicio/pacientes.html
@@ -28,3 +28,5 @@
 {% block accion1 %}
     <a class="btn btn-primary" href={% url 'agregar_paciente' %}>Agregar Paciente</a>
 {% endblock accion1 %}
+{% block cards %}
+{% endblock cards %}
