--- a/usuarios/templates/usuarios/cambiar_contrasenia.html
+++ b/usuarios/templates/usuarios/cambiar_contrasenia.html
@@ -1,18 +1,20 @@
 {% extends "base.html" %}
 {% block h1_body1 %}
-Modificar paciente {{paciente.id}}
+Cambiar Password
 {% endblock h1_body1 %}
 {% block main %}
-    <form action={% url "editar_paciente" paciente.id %} method="POST">
+    <form action={% url "cambiar_contrasenia" %} method="POST">
         {% csrf_token %}
         <table>
-            {{formulario_ed}}
+            {{form}}
+            {% comment %} REVISAR REDIRECT {% endcomment %}
         </table>
-        <input type="submit" value="Editar">
+        <input type="submit" value="Guardar">
     </form>
 {% endblock main %}
 {% block accion1 %}
     <a class="btn btn-primary" href={% url 'inicio' %}> Home</a>
 {% endblock accion1 %}
+
 {% block cards %}
 {% endblock cards %}
