se generan decoradores y mixins para eliminacion y modificacion de pacientes y estudios

--- a/estudios_medicos/templates/estudios_rx/detalles_estudio_rx.html
+++ b/estudios_medicos/templates/estudios_rx/detalles_estudio_rx.html
@@ -3,7 +3,7 @@
 Detalles de Estudio RX
 {% endblock h1_body1 %}
 {% block main %}
-    <h2>Detalles de {{estudios_rx.id}}</h2>
+    <h2>Detalles de {{estudios_rx}}</h2>
     <ul>
         <li>nombre: {{estudios_rx.nombre}}</li>
         <li>Tipo: {{estudios_rx.tipo}}</li>
