--- a/usuarios/templates/usuarios/logout.html
+++ b/usuarios/templates/usuarios/logout.html
@@ -7,3 +7,8 @@ Logout
 {% endblock main %}
 {% block cards %}
 {% endblock cards %}
+{% block accion1 %}
+    <a class="btn btn-primary" href={% url 'inicio' %}>Home</a>
+{% endblock accion1 %}
+
+
