--- a/estudios_medicos/templates/estudios_rx/crear_estudio_rx.html
+++ b/estudios_medicos/templates/estudios_rx/crear_estudio_rx.html
@@ -13,5 +13,6 @@ Crear Estudio RX
 {% endblock main %}
 {% block cards %}
 {% endblock cards %}
-
-
+{% block accion1 %}
+    <a class="btn btn-primary" href={% url 'inicio' %}>Home</a>
+{% endblock accion1 %}
