se agrega img a estudio, revisar

--- a/estudios_medicos/templates/estudios_rx/detalles_estudio_rx.html
+++ b/estudios_medicos/templates/estudios_rx/detalles_estudio_rx.html
@@ -10,6 +10,8 @@ Detalles de Estudio RX
         <li>Afiliado: {{estudios_rx.n_afiliado}}</li>
         <li>Profesional: {{estudios_rx.profesional}}</li>
         <li>Fecha: {{estudios_rx.fecha_estudio}}</li>
+        <li>Imagen: <img src={{estudios_rx.img}} alt=""></li>
+
    </ul>
 {% endblock main %}
 {% block cards %}
